--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,8 @@ services:
     runtime: node
     region: oregon
     plan: free
-    rootDir: server
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    buildCommand: cd server && npm install && cd .. && npm install && npm run build:server
+    startCommand: cd server && node dist/index.js
     envVars:
       - key: PORT
         value: 3001
