--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "tsx src/index.ts",
+    "start:prod": "node dist/index.js",
     "clean": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,7 +29,12 @@
     "@types/node": "^20.10.5",
     "@types/cors": "^2.8.17",
     "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
     "rimraf": "^5.0.5"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "cors": "^2.8.5",
+    "tsx": "^4.7.0"
   }
 }
