Fix dist path for server deployment

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,6 +14,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src/**/*", "../shared/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*", "../shared/*.ts"],
+  "exclude": ["node_modules", "dist", "../shared/__tests__"]
 }
