--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
-    "build": "npm run build:server && npm run build:client"
+    "build": "npm run build:server && npm run build:client",
+    "generate:stickers": "node scripts/generate-stickers.js"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
